--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "slim/slim": "4.*",
         "slim/psr7": "^1.6",
-        "php-di/php-di": "^7.0"
+        "php-di/php-di": "^7.0",
+        "jenssegers/blade": "^1.1"
     }
 }
