lesson 2: Views With Blade

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "slim/slim": "4.*",
+        "slim/slim": "^4.11",
         "slim/psr7": "^1.6",
         "php-di/php-di": "^7.0",
         "jenssegers/blade": "^1.1"
