--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,13 @@
         "slim/psr7": "^1.6",
         "php-di/php-di": "^7.0",
         "jenssegers/blade": "^1.1"
+    },
+    "autoload": {
+        "files" : [
+            "./app/helpers.php"
+        ],
+        "psr-4": {
+            "App\\" : "app"
+        }
     }
 }
