--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,11 @@
         "slim/slim": "^4.11",
         "slim/psr7": "^1.6",
         "php-di/php-di": "^7.0",
-        "jenssegers/blade": "^1.1"
+        "jenssegers/blade": "^1.1",
+        "php" : "8.1.2",
+        "ext-curl" : "*",
+        "ext-json" : "*",
+        "php-di/slim-bridge": "^3.3"
     },
     "autoload": {
         "files" : [
