--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "php" : "8.1.2",
         "ext-curl" : "*",
         "ext-json" : "*",
-        "php-di/slim-bridge": "^3.3"
+        "php-di/slim-bridge": "^3.3",
+        "illuminate/support": "*",
+        "illuminate/database": "*"
     },
     "autoload": {
         "files" : [
